--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+	id 'idea'
 	id 'java'
 	id 'org.springframework.boot' version '4.0.1'
 	id 'io.spring.dependency-management' version '1.1.7'
@@ -7,6 +8,13 @@ plugins {
 group = 'com.tnr.sensors'
 version = '0.0.1-SNAPSHOT'
 description = 'Demo project for Spring Boot'
+
+idea {
+	module {
+		downloadJavadoc = true
+		downloadSources = true
+	}
+}
 
 java {
 	toolchain {
@@ -26,10 +34,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	implementation "org.apache.commons:commons-lang3:3.20.0"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'com.fasterxml.uuid:java-uuid-generator:5.2.0'
+	implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
 }
 
 tasks.named('test') {
